# hocip-treasury-app

./: .gitignore  package-lock.json
hocip-treasury-app/: README.md  TEST_RESULTS.md  Treasury Process Interview Questions.md  index.html  package-lock.json  package.json
hocip-treasury-app/src/: App.css  App.jsx  index.css
hocip-treasury-app/src-tauri/: Cargo.toml  tauri.conf.json
hocip-treasury-app/src-tauri/capabilities/: capabilities-default.json
hocip-treasury-app/src-tauri/icons/: icon.icns
hocip-treasury-app/src-tauri/src/: lib.rs  main.rs
hocip-treasury-app/src/components/: Sidebar.css  Sidebar.jsx
hocip-treasury-app/src/context/: DataContext.js
hocip-treasury-app/src/pages/: AnnualReport.jsx  Dashboard.jsx  Expenses.jsx  Income.jsx  MonthlyReport.jsx  Page.css
hocip-treasury-app/src/utils/: TEST_STRATEGY.js  calculations.js  calculations.test.js  excelExport.js  financialYear.test.js  storage.js
