[package]
name = "hocip-treasury-app"
version = "0.1.0"
description = "AFM Dzingidzingi Treasury System — UCT HOCIP 2025/2026"
authors = ["MSHHLA017", "PDXORO001"]
edition = "2021"

[lib]
name = "hocip_treasury_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri          = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-fs     = "2"
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
